--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a{
 .header{
     display: flex;
     justify-content: space-around;
+    margin-left: 50px;
 }
 .prim{
     font-size: 24px;
@@ -32,6 +33,7 @@ a{
     display: flex;
     gap: 6px;
     flex-wrap: wrap;
+    margin-left: 130px;
 }
 ul{
     display: flex;
@@ -41,28 +43,34 @@ ul{
     display: flex;
     background-color: #1f2937;
     justify-content: center;
-    gap: 20px;
+    gap: px;
     align-items: center;
     flex-wrap: wrap;
-    padding-top: 75px;
+    padding-top: 65px;
     padding-bottom: 100px;
+    height: 310px;
 }
 .Main{
     color:#f9faf8;
     font-size: 48px;
     font-weight:bolder;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-width: 400px;
+width: 350px;
+text-align: left;
+line-height: 1.2;
 }
 .next{
 color: #E5E7EB;
-font-size: 18px;
-width: 400px;
+font-size: 20px;
+width: 460px;
+
 }
 .p{
     margin-top: 25px;
-    width: 450px;
+    width: 520px;
     height:240px;
+    margin-left: 48px;
+
 }
 .pic{
     height: 240px;
@@ -83,10 +91,13 @@ width: 400px;
  color: #f9faf8;
  font-size: 18px;
  font-weight: bold;
+ border-style: solid;
+ border-color: #3882f6;
 }
 .next{
-    padding-top: 10px;
+    padding-top: px;
     padding-bottom: 10px;
+    
 }
 .elt{
     display: flex;
